--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,19 +1,31 @@
-@import url("https://fonts.googleapis.com/css2?family=Rock+Salt&family=Balsamiq+Sans&family=Ubuntu+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rock+Salt&family=Balsamiq+Sans&family=Ubuntu+Mono&family=Open+Sans&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box; }
 
+body {
+  font-family: 'Open Sans', sans-serif; }
+
 a {
   text-decoration: none;
   color: #fff; }
 
+p {
+  padding: 0.7rem 0;
+  line-height: 1.6; }
+
+h1 {
+  font-family: 'Balsamiq Sans', cursive; }
+
 ul {
   list-style: none; }
 
-#home .home-content {
+#home .navbar nav, #home .home-content, #about .cards-container {
   max-width: 1100px;
-  margin: auto; }
+  margin: auto;
+  padding: 0 2rem;
+  height: 100%; }
 
 #home .home-content .content a {
   color: #fff;
@@ -22,32 +34,43 @@ ul {
   border: none;
   transition: opacity 0.4s ease-out; }
 
+.tech {
+  display: inline;
+  font-size: 1.2rem;
+  text-emphasis: bold;
+  color: #fff48f; }
+
 #home {
   position: relative;
-  height: 100vh;
-  background: url("/public/img/dell_backlit_keyboard-wallpaper-1920x1080.jpg") no-repeat center center/cover; }
+  height: 90vh;
+  margin-top: 10vh;
+  background: url("../img/background.jpg") no-repeat center center/cover; }
   #home .navbar {
-    position: sticky;
+    position: fixed;
+    height: 90px;
+    width: 100%;
     top: 0;
-    background: rgba(51, 51, 51, 0.9); }
+    background: #333;
+    z-index: 2; }
     #home .navbar nav {
-      height: 12vh;
+      height: 100%;
       display: flex;
       align-items: center;
-      justify-content: space-around; }
+      justify-content: space-between; }
       #home .navbar nav ul {
         font-family: 'Balsamiq Sans', cursive;
         font-size: 1.1rem;
         z-index: 1;
         display: flex; }
         #home .navbar nav ul li {
-          margin-right: 3rem;
-          padding: 0.7rem 0;
-          transition: border-bottom 0.4s ease-out; }
+          margin-left: 3rem;
+          padding: 1rem 0;
+          border-bottom: 2px transparent solid;
+          transition: border-color 0.4s ease-out; }
           #home .navbar nav ul li a {
             transition: color 0.4s ease-out; }
           #home .navbar nav ul li:hover {
-            border-bottom: 1px #fff48f solid; }
+            border-color: #fff48f; }
             #home .navbar nav ul li:hover a {
               color: #fff48f; }
       #home .navbar nav .logo {
@@ -57,15 +80,17 @@ ul {
           color: #fff48f;
           font-size: 1.5rem; }
   #home .home-content {
-    height: 88vh;
-    display: grid;
-    grid-template-columns: 2fr 1fr; }
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap; }
     #home .home-content .terminal {
       display: block;
-      margin: auto auto;
+      flex: 3;
       z-index: 1;
       width: 90%;
-      height: 60%;
+      height: 70%;
       padding: 1rem;
       border-radius: 10px;
       background: rgba(51, 51, 51, 0.9);
@@ -88,9 +113,10 @@ ul {
         color: #bbd196; }
     #home .home-content .content {
       display: block;
-      margin: auto;
+      margin-left: 1rem;
+      flex: 1;
       z-index: 1;
-      height: 60%;
+      height: 70%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -99,23 +125,54 @@ ul {
       border-radius: 10px; }
       #home .home-content .content .personal-img img {
         max-width: 200px; }
+      #home .home-content .content p {
+        color: #fff;
+        text-align: center;
+        padding-top: 0.7rem;
+        font-size: 1.2rem; }
       #home .home-content .content a {
         background: #fff48f;
         color: #333;
         border-radius: 5px;
-        margin-top: 3rem;
+        margin-top: 1rem;
         font-family: 'Balsamiq Sans', cursive; }
         #home .home-content .content a:hover {
           opacity: 0.5; }
-  #home:before {
-    content: '';
-    position: absolute;
-    background: #333;
-    opacity: 0.3;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0; }
+
+#about {
+  padding: 2rem 0;
+  background: #333; }
+  #about h1 {
+    color: #80bdab;
+    text-align: center;
+    padding: 2rem;
+    font-size: 2rem; }
+  #about .cards-container {
+    display: grid;
+    grid-template-areas: 'education education' 'skills skills' 'experience army'; }
+    #about .cards-container .card {
+      background: rgba(128, 189, 171, 0.9);
+      padding: 1rem;
+      margin: 0.5rem 0;
+      border-radius: 10px;
+      display: flex;
+      align-items: center; }
+      #about .cards-container .card i {
+        color: #fff;
+        padding: 1rem;
+        margin: 0 3rem; }
+      #about .cards-container .card p {
+        padding: 0.5rem;
+        font-size: 1.1rem; }
+    #about .cards-container #skills {
+      grid-area: skills; }
+    #about .cards-container #education {
+      grid-area: education; }
+    #about .cards-container #experience {
+      grid-area: experience; }
+    #about .cards-container #army {
+      grid-area: army;
+      margin-left: 1rem; }
 
 footer a {
   color: #333; }
