--- a/public/css/index.css
+++ b/public/css/index.css
@@ -234,8 +234,10 @@ ul {
       display: flex;
       align-items: center; }
       #projects .cards-container .card img {
-        max-width: 300px;
-        padding: 0 3rem; }
+            max-width: 300px;
+    margin: 0 3rem;
+    border-radius: 10px;
+} }
       #projects .cards-container .card .info h3 {
         font-size: 1.4rem; }
 
