--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -128,23 +128,26 @@ h2 {
 
 .home-content {
   flex-direction: column; }
-  .home-content .home-content-container .terminal {
-    height: 50%;
-    width: 100%;
-    flex: 1;
-    width: 100%;
-    margin: 3rem 0;
-    padding: 1rem; }
-    .home-content .home-content-container .terminal .center-container {
-      font-size: 1rem; }
-  .home-content .home-content-container .content {
-    height: 50%;
-    width: 100%; }
-    .home-content .home-content-container .content .center-container .personal-img img {
-      max-width: 100px !important;
-      margin: 0 !important; }
-    .home-content .home-content-container .content .center-container p {
-      font-size: 1rem !important; }
+  .home-content .home-content-container {
+    flex-direction: column; }
+    .home-content .home-content-container .terminal {
+      height: 300px !important;
+      margin-top: 2rem;
+      margin-right: 0 !important;
+      margin-bottom: 2rem;
+      padding: 1rem; }
+      .home-content .home-content-container .terminal .center-container {
+        width: 100% !important;
+        height: 300px;
+        font-size: 1rem; }
+    .home-content .home-content-container .content {
+      height: 300px;
+      width: 100%; }
+      .home-content .home-content-container .content .center-container .personal-img img {
+        max-width: 100px !important;
+        margin: 0 !important; }
+      .home-content .home-content-container .content .center-container p {
+        font-size: 1rem !important; }
 
 #projects .cards-container .card {
   flex-direction: column; }
